# motuman

./: Cargo.toml  README.md  config.toml  motu_config.toml  motu_monitor_off.py  motu_monitor_on.py  output.txt
benches/: midi_command_benchmark.rs
pyrefs/: motu_monitor_off.sh  motu_monitor_on.sh  motureset.sh  oscconfig.json  queuetester.py
src/: args.rs  args.test.rs  args_test.rs  config.rs  lib.rs  main.rs  midi.rs  motu.rs  osc.rs
src/midi/: midicommand.rs  miditype.rs
src/motu/: channel.rs  motucommand.rs  osc.rs
