[package]
name = "motuman"
version = "0.1.0"
edition = "2021"
default-run = "motuman"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.1", features = ["derive"] }
rosc = "0.10.1"
toml = "0.7.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0.64"
serde_with = "3.0.0"
serde = { version = "1.0.130", features = ["derive"] }
midir = "0.9.1"
# [profile.release]
# strip = true
# opt-level = "s"
# lto = true
# codegen-units = 1