[package]
name = "motuman"
version = "0.1.0"
edition = "2021"
default-run = "motuman"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
rosc = "0.10.1"
toml = "0.7.6"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde_json = "1.0.104"
serde_with = "3.2.0"
serde = { version = "1.0.183", features = ["derive"] }
midir = "0.9.1"
# [profile.release]
# strip = true
# opt-level = "s"
# lto = true
# codegen-units = 1

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "midi_command_benchmark"
harness = false
